# libretrack

./: .gitignore  .gitmodules  .metadata  BUILD.md  CONTRIBUTING.md  LICENSE.md  NEWS.md  PRIVACY.md  README.md  analysis_options.yaml  build.yaml  l10n.yaml  pubspec.yaml
.github/workflows/: flutter_build.yml  flutter_build_windows.yml  flutter_release_build.yml  flutter_test.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
art/: android_tv_banner.xcf
ios/Flutter/: .last_build_id
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: env.dart  injector.config.dart  injector.dart  locale.dart  logger.dart  main.dart
lib/core/: app_database_isolate_binder.dart  date_time_provider.dart  notification_manager.dart  notification_manager.freezed.dart  notification_manager.g.dart  platform_info.dart  platform_info.freezed.dart  tracking_id_generator.dart  tracking_limiter.dart  tracking_limiter.freezed.dart  tracking_scheduler.dart  tracking_scheduler.freezed.dart  transaction_id_generator.dart
lib/di/: app_database_module.dart  client_module.dart  flutter_secure_storage_module.dart  shared_preferences_module.dart
lib/l10n/: app_cmn.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_localizations.dart  app_localizations_cmn.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_it.dart  app_localizations_ru.dart  app_localizations_sk.dart  app_ru.arb  app_sk.arb  intl_en.arb  intl_es.arb  intl_fr.arb  (+3 more)
linux/: .gitignore  CMakeLists.txt  main.cc  my_application.cc  my_application.h  path_provider.cc  path_provider.h  system_tray_channel.cc  system_tray_channel.h
linux/po/: CMakeLists.txt  it.po  messages.pot  ru.po  sk.po
snap/: snapcraft.yaml
test/: tracking_id_generator_test.dart  tracking_limiter_test.dart  tracking_scheduler_test.dart  transaction_id_generator_test.dart
windows/: CMakeLists.txt
(+544 files in other folders)
